minor: revise ref to Boolean types